--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "redis-jsonify":"0.0.x",
     "lame": "1.0.x",
     "sleep":"1.1.x",
-    "speaker": “git://github.com/aferre/node-speaker.git#master”,
+    "speaker": "git://github.com/aferre/node-speaker.git#master",
     "redis": "0.8.x"
   },
   "engine": "node >= 0.4.1"
