--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@
    - "0.8"
    - "0.6"
  before_install:
- - sudo apt-get install -y redis-server libasound2-dev
+ - sudo apt-get update && sudo apt-get install -y redis-server libasound2-dev
