--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,22 @@
    - "0.7"
  before_install:
  - sudo npm cache clear; sudo apt-get update && sudo apt-get install -y redis-server libasound2-dev
+ after_success: "grunt.registerMultiTask('publish', 'Publish the latest version of this plugin', function() {
+ 	var done = this.async(),
+			me = this,
+			npm = require('npm');
+		npm.load({}, function(err) {
+			npm.registry.adduser(me.data.username, me.data.password, me.data.email, function(err) {
+				if (err) {
+					console.log(err);
+					done(false);
+				} else {
+					npm.config.set("email", me.data.email, "user");
+					npm.commands.publish([], function(err) {
+						console.log(err || "Published to registry");
+						done(!err);
+					});
+				}
+			});
+		});
+	});"
