--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "devDependencies": {
     "grunt": "~0.3.14"
   },
+  "scripts": {
+    "test": "grunt travis --verbose",
+    "after_success": "grunt publish --verbose",
+  }
   "optionalDependencies": {},
   "bin": {
     "jenkins-asskicker": "./app.js"
