--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "test": "grunt travis --verbose",
-    "after_success": "grunt publish --verbose",
+    "after_success": "grunt publish --verbose"
   },
   "optionalDependencies": {},
   "bin": {
