--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@
    - "0.8"
    - "0.7"
  before_install:
- - sudo npm cache clear; sudo apt-get update && sudo apt-get install -y redis-server libasound2-dev
+ - sudo npm cache clear; sudo apt-get update && sudo apt-get install -y redis-server libasound2-dev libavahi-compat-libdnssd-dev
  after_success: grunt publish --verbose
