--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@
    - "0.10"
    - "0.8"
    - "0.7"
+ before_script:
+- npm install -g grunt-cli
  before_install:
  - sudo npm cache clear; sudo apt-get update && sudo apt-get install -y redis-server libasound2-dev libavahi-compat-libdnssd-dev
  after_success: grunt publish --verbose
