--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "engine": "node >= 0.7",
   "devDependencies": {
-    "grunt": "~0.4.x"
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.6.3",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-uglify": "~0.2.2"
   },
   "scripts": {
     "after_success": "grunt publish --verbose"
