--- a/package.json
+++ b/package.json
@@ -11,27 +11,29 @@
     "jenkins"
   ],
   "dependencies": {
-    "redis-jsonify":"0.0.x",
+    "redis-jsonify": "0.0.x",
     "lame": "1.0.x",
-    "sleep":"1.1.x",
+    "sleep": "1.1.x",
     "speaker": "git://github.com/aferre/node-speaker.git#master",
     "redis": "0.8.x",
-    "jenkins-api" : "0.1.x",
+    "jenkins-api": "0.1.x",
     "nconf": "0.6.x",
-    "ws":"0.4.x",
-    "xml2js":"0.2.x",
-    "string":"1.5.x",
-    "mdns":"1.1.x"
+    "ws": "0.4.x",
+    "xml2js": "0.2.x",
+    "string": "1.5.x",
+    "mdns": "1.1.x"
   },
   "engine": "node >= 0.7",
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-release": "~0.5.1"
   },
   "scripts": {
-    "after_success": "grunt publish --verbose"
+    "test": "grunt travis --verbose"
   },
   "optionalDependencies": {},
   "bin": {
