--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ws": "0.4.x",
     "xml2js": "0.2.x",
     "string": "1.5.x",
-    "mdns": "1.1.x"
+    "mdns": "1.1.x",
+    "hashmap":"0.9.3
   },
   "engine": "node >= 0.7",
   "devDependencies": {
