Improved jenkins instances listening

--- a/conf/config.json
+++ b/conf/config.json
@@ -1,22 +1,32 @@
 {
-  "jenkins": {
-    "websocket": {
-      "port": 9000
+    "jenkins": {
+        "websocket": {
+            "port": 9000
+        },
+        "udp": {
+            "port": 10000
+        },
+        "notifyUponRestart":true
     },
-    "udp": {
-      "port": 10000
+    "desc": {
+        "location": "lab1",
+        "users": [
+            {
+                "firstName": "John",
+                "lastName": "Doe"
+            },
+            {
+                "firstName": "Anna",
+                "lastName": "Smith"
+            },
+            {
+                "firstName": "Peter",
+                "lastName": "Jones"
+            }
+        ]
+    },
+    "redis": {
+        "host": "127.0.0.1",
+        "port": 5984
     }
-  },
-  "desc": {
-      "location": "lab1",
-      "users":[
-{ "firstName":"John" , "lastName":"Doe" }, 
-{ "firstName":"Anna" , "lastName":"Smith" }, 
-{ "firstName":"Peter" , "lastName": "Jones" }
-]
-  },
-  "redis": {
-    "host": "127.0.0.1",
-    "port": 5984
-  }
 }
