--- a/conf/config.json
+++ b/conf/config.json
@@ -4,7 +4,9 @@
             "port": 9000
         },
         "udp": {
-            "port": 10000
+            "port": 10000,
+            "interval": 10000,
+            "consideredDownInterval" : 19000,
         },
         "notifyUponRestart":true
     },
